--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require-dev": {
         "phpunit/phpunit": "^7.5",
         "mockery/mockery": "^1.2",
-        "doctrine/orm": "^2.6"
+        "doctrine/orm": "^2.6",
+        "illuminate/support": "^5.7"
     },
     "autoload": {
         "psr-4": {
