--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "mockery/mockery": "^1.2",
         "doctrine/orm": "^2.6",
         "illuminate/support": "^5.7",
-        "stepthefkup/pagination": "self.version"
+        "stepthefkup/pagination": "^0.2"
     },
     "autoload": {
         "psr-4": {
