--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "mockery/mockery": "^1.2",
         "doctrine/orm": "^2.6",
         "illuminate/support": "^5.7",
-        "stepthefkup/pagination": "^0.3"
+        "stepthefkup/pagination": "^0.3",
+        "illuminate/database": "^5.7"
     },
     "autoload": {
         "psr-4": {
@@ -25,8 +26,11 @@
     },
     "suggest": {
         "doctrine/orm": "To use the Doctrine ORM implementation",
+        "illuminate/database": "To use the Illuminate Eloquent implementation",
         "stepthefkup/pagination": "To use pagination within your repositories"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "branch-alias": {
             "dev-master": "0.3-dev"
