--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         "phpunit/phpunit": "^7.5",
         "mockery/mockery": "^1.2",
         "doctrine/orm": "^2.6",
-        "illuminate/support": "^5.7",
         "stepthefkup/pagination": "^0.3",
-        "illuminate/database": "^5.7"
+        "laravel/lumen-framework": "^5.5",
+        "vlucas/phpdotenv": "^3.3"
     },
     "autoload": {
         "psr-4": {
