--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "stepthefkup/easy-repository",
+    "name": "loyaltycorp/easy-repository",
     "description": "Provides an easy way to implement the Repository Design Pattern in your applications",
     "type": "library",
     "license": "MIT",
@@ -10,24 +10,26 @@
         "phpunit/phpunit": "^7.5",
         "mockery/mockery": "^1.2",
         "doctrine/orm": "^2.6",
-        "stepthefkup/pagination": "^0.5",
+        "loyaltycorp/easy-pagination": "^0.5",
         "laravel/lumen-framework": "^5.5",
         "vlucas/phpdotenv": "^3.3"
     },
     "autoload": {
         "psr-4": {
+            "LoyaltyCorp\\EasyRepository\\": "src",
             "StepTheFkUp\\EasyRepository\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
+            "LoyaltyCorp\\EasyRepository\\Tests\\": "tests",
             "StepTheFkUp\\EasyRepository\\Tests\\": "tests"
         }
     },
     "suggest": {
         "doctrine/orm": "To use the Doctrine ORM implementation",
         "illuminate/database": "To use the Illuminate Eloquent implementation",
-        "stepthefkup/pagination": "To use pagination within your repositories"
+        "loyaltycorp/easy-pagination": "To use pagination within your repositories"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
