Switch to LoyaltyCorp namespaces (#23)
* Switch to LoyaltyCorp namespaces while keeping aliases for StepTheFkUp

* Fix standards

--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     "autoload": {
         "psr-4": {
             "LoyaltyCorp\\EasyRepository\\": "src",
-            "StepTheFkUp\\EasyRepository\\": "src"
+            "LoyaltyCorp\\EasyRepository\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "LoyaltyCorp\\EasyRepository\\Tests\\": "tests",
-            "StepTheFkUp\\EasyRepository\\Tests\\": "tests"
+            "LoyaltyCorp\\EasyRepository\\Tests\\": "tests"
         }
     },
     "suggest": {
