--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,14 @@
     },
     "autoload": {
         "psr-4": {
-            "LoyaltyCorp\\EasyRepository\\": "src"
+            "LoyaltyCorp\\EasyRepository\\": "src",
+            "StepTheFkUp\\EasyRepository\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "LoyaltyCorp\\EasyRepository\\Tests\\": "tests"
+            "LoyaltyCorp\\EasyRepository\\Tests\\": "tests",
+            "StepTheFkUp\\EasyRepository\\Tests\\": "tests"
         }
     },
     "suggest": {
