Feature/eonx namespaces (#102)
* Remove class aliases

* Replace LoyaltyCorp and StepTheFkUp occurrences with EonX

--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,12 @@
     },
     "autoload": {
         "psr-4": {
-            "LoyaltyCorp\\EasyRepository\\": "src",
-            "StepTheFkUp\\EasyRepository\\": "src"
+            "EonX\\EasyRepository\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "LoyaltyCorp\\EasyRepository\\Tests\\": "tests",
-            "StepTheFkUp\\EasyRepository\\Tests\\": "tests"
+            "EonX\\EasyRepository\\Tests\\": "tests"
         }
     },
     "suggest": {
