--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.4",
+        "phpunit/phpunit": "^7.5 || ^8.4",
         "mockery/mockery": "^1.2",
         "doctrine/orm": "^2.6",
         "eonx-com/easy-pagination": "^2.4",
