--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,15 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": "^7.2"
+        "php": "^7.2 || ^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4 || ^9.5",
-        "mockery/mockery": "^1.2",
+        "mockery/mockery": "^1.4",
         "doctrine/orm": "^2.6",
         "eonx-com/easy-pagination": "^3.4",
-        "laravel/lumen-framework": "^5.5",
-        "vlucas/phpdotenv": "^3.3"
+        "laravel/lumen-framework": "^5.5 || ^8.1",
+        "vlucas/phpdotenv": "^3.3 || ^5.2"
     },
     "autoload": {
         "psr-4": {
